--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "redux": "4.0.0",
+    "redux-logger": "^3.0.6",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
